tests/characterization/snapshots/env_name__punctuation_tail.snap
---
source: tests/characterization/init.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: template 'nonexistent' is not implemented.
--- end ---
